# XRVessels-for-Linux

./: CMakeLists.txt
XRVessels/DeltaGliderXR1/: DeltaGliderXR1Prefs.cfg
XRVessels/DeltaGliderXR1/DeltaGliderXR1/: DeltaGliderXR1.cpp  DeltaGliderXR1_ED.cpp  XR1Globals.cpp
XRVessels/DeltaGliderXR1/XR1Lib/: DeltaGliderXR1.h  DeltaGliderXR1_DMGApply.cpp  DeltaGliderXR1_DMGCheck.cpp  DeltaGliderXR1_IO.cpp  DeltaGliderXR1_VC.cpp  SecondaryHUDData.h  SubclassPreSteps.cpp  TextBox.cpp  TextBox.h  XR1AngularDataComponent.cpp  XR1AngularDataComponent.h  XR1Animations.cpp  XR1Areas.cpp  XR1Areas.h  XR1AreasBars.cpp  XR1AreasButtons.cpp  XR1AreasGauges.cpp  XR1AreasLEDs.cpp  XR1AreasNumbers.cpp  XR1AreasSwitches.cpp  XR1Component.h  XR1ConfigFileParser.cpp  XR1ConfigFileParser.h  XR1EngineDisplayComponent.h  XR1FuelDisplayComponent.h  XR1Globals.h  XR1HUD.cpp  XR1HUD.h  XR1InstrumentPanels.cpp  XR1InstrumentPanels.h  XR1Keys.cpp  XR1LowerPanelAreas.cpp  XR1LowerPanelAreas.h  XR1LowerPanelComponents.cpp  XR1LowerPanelComponents.h  XR1MDAAirspeedHoldMode.cpp  XR1MDAAttitudeHoldMode.cpp  XR1MDADescentHoldMode.cpp  XR1MDAHullTempsMode.cpp  XR1MDAReentryCheckMode.cpp  (+53 more)
XRVessels/XR2Ravenstar/XR2Ravenstar/: XR2Animations.cpp  XR2AreaIDs.h  XR2Areas.cpp  XR2Areas.h  XR2Components.cpp  XR2Components.h  XR2ConfigFileParser.cpp  XR2ConfigFileParser.h  XR2Globals.cpp  XR2Globals.h  XR2InstrumentPanels.cpp  XR2InstrumentPanels.h  (+16 more)
XRVessels/XRVesselCtrlDemo/: ParserTreeNode.cpp  XRVCClient.cpp  XRVCClientCommandParser.cpp  XRVCMainDialog.cpp  XRVCScriptThread.cpp  XRVesselCtrlDemo.cpp
(+57 files in other folders)
